# VideoStreamingWithCmtTracker

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/galiazat/diplomtest4opencvimplement/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/galiazat/videoStreamingCmt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMT.cpp  CMT.h  native-lib.cpp
app/src/main/java/com/galiazat/diplomtest4opencvimplement/: App.java  MainActivity.java  UtilRectangle.java
app/src/main/java/com/galiazat/diplomtest4opencvimplement/cmt/: CMT.java  CmtThread.java
app/src/main/java/com/galiazat/diplomtest4opencvimplement/custom/: VideoClientPreviewView.java  VideoPreviewView.java  VideoSourcePreviewView.java
app/src/main/java/com/galiazat/diplomtest4opencvimplement/entites/: SupportedFormat.java
app/src/main/java/com/galiazat/diplomtest4opencvimplement/screen/base/: BaseActivity.java  BaseModel.java  BasePresenter.java  BaseView.java
app/src/main/java/com/galiazat/diplomtest4opencvimplement/screen/splash/: SplashActivity.java
app/src/main/java/com/galiazat/diplomtest4opencvimplement/screen/videoClient/: VideoClientActivity.java
app/src/main/java/com/galiazat/diplomtest4opencvimplement/screen/videoSource/: VideoSourceActivity.java
app/src/main/java/com/galiazat/diplomtest4opencvimplement/streaming/: Constants.java  IpUtils.java
app/src/main/java/com/galiazat/diplomtest4opencvimplement/streaming/client/: ClientSocketListener.java  ClientSocketThread.java
app/src/main/java/com/galiazat/diplomtest4opencvimplement/streaming/codecs/: VideoDecoderThread.java  VideoEncoderThread.java
app/src/main/java/com/galiazat/videoStreamingCmt/: App.java  UtilRectangle.java
app/src/main/java/com/galiazat/videoStreamingCmt/cmt/: CMT.java  CmtThread.java
app/src/main/java/com/galiazat/videoStreamingCmt/custom/: VideoClientPreviewView.java  VideoSourcePreviewView.java
app/src/main/java/com/galiazat/videoStreamingCmt/entites/: SupportedFormat.java
app/src/main/java/com/galiazat/videoStreamingCmt/screen/base/: BaseModel.java  (+3 more)
app/src/main/java/com/galiazat/videoStreamingCmt/streaming/: Constants.java  IpUtils.java
app/src/main/res/anim/: bottom_up.xml
app/src/main/res/drawable/: ic_check_circle_background.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  activity_video_client.xml  activity_video_source.xml  holder_supported_preview_format.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/test/java/com/galiazat/diplomtest4opencvimplement/: ExampleUnitTest.java
app/src/test/java/com/galiazat/videoStreamingCmt/: ExampleUnitTest.java
(+37 files in other folders)
